infra/k8s/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudtask
  labels:
    app.kubernetes.io/name: cloudtask
